appId: com.juancastro.sudokuapp
---
- launchApp
# - tapOn:
#     text: "Continue"
#     optional: true
- extendedWaitUntil:
    visible: "Let's play!"
    timeout: 30000
- tapOn:
    text: "Let's play!"
- assertVisible: "SUDOKU"
- tapOn: "Easy difficulty"
- tapOn:
    text: "New game!"
    optional: true
- assertVisible: "Number 1"
- tapOn:
    text: ".*empty"
- tapOn: "Clues remaining: 3"
- assertVisible: "Clues remaining: 2"
